# solar-generation-prediction

./: Dockerfile  README.md  app.py  check.txt  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml  main_solargenpred.yml  main_solargenwebapp.yml
models/: scaler.pkl  spfnet_best_model.keras  spfnet_final_model.keras
notebooks/: check_get_data.ipynb  check_hopswork.ipynb  train_model.ipynb
src/: __init__.py  config.py
src/features/: build_features.py  remove_outliers.py
src/hopsworks_integration/: __init__.py  feature_store.py  store_data.py
src/models/: LearningAlgorithms.py  predict_model.py  train_model.py
