[project]
name = "solar-gen-pred"
version = "0.1.0"
description = "solar generation prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "active>=0.0.5a0",
    "fastapi>=0.115.12",
    "hopsworks>=3.0.5",
    "joblib>=1.5.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=1.23.0,<2.0.0", # Changed to be compatible with TensorFlow
    "pandas>=2.0.0", # Adjusted to be compatible with NumPy < 2.0
    "pydantic-settings>=2.9.1",
    "scikit-learn>=1.6.1",
    "tensorflow-cpu>=2.14.0",
    "uvicorn>=0.34.2",
]
